--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/ntbrock/prototype-webstorm-es6/issues"
   },
-  "homepage": "https://github.com/ntbrock/prototype-webstorm-es6#readme"
+  "homepage": "https://github.com/ntbrock/prototype-webstorm-es6#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0"
+  }
 }
