--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "prototype-webstorm-es6",
   "version": "1.0.0",
   "description": "Prototyping Es6 Development Environment Best Practices",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.11.0",
-    "@babel/preset-env": "^7.11.0"
+    "@babel/preset-env": "^7.11.0",
+    "mocha": "^8.1.0"
   }
 }
