--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.11.0",
+    "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "mocha": "^8.1.0"
   }
