--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "url": "https://github.com/ntbrock/prototype-webstorm-es6/issues"
   },
   "homepage": "https://github.com/ntbrock/prototype-webstorm-es6#readme",
-  "dependencies": {},
+  "dependencies": {
+    "mathjs": "^7.1.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.0",
