Session 2: Example of exporting functions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Prototyping Es6 Development Environment Best Practices",
   "main": "src/main.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node src/main.js"
   },
   "repository": {
     "type": "git",
